feature rails new app clone

--- a/app/components/flag_command_component/flag_command_component.yml
+++ b/app/components/flag_command_component/flag_command_component.yml
@@ -1,11 +1,75 @@
 en:
   flag_command_component:
-    none: "None"
-    none_description: "Not using preset"
+    preset_none: "None"
+    preset_none_description: "Not using preset"
     api: "API mode"
     api_description: "Choose this if you plan to use the Rails app as API only"
     minimal: "Minimal mode"
     minimal_description: "This will skip all Active-* gems, bootsnap, builder, spring, system_tests, turbo etc"
+    sqlite3: "SQLite"
+    sqlite_description: "The Rails default, Pieter Levels used it to scale remoteok.io!" # TODO: FIX THIS 
+    mysql: "MySQL"
+    mysql_description: "Decent database"
+    postgresql: "PostgreSQL"
+    postgresql_description: "Recommended database with plenty of extensions"
+    gitignore: "Create .gitignore file?"
+    gitignore_description: "This will create a .gitignore file in your app"
+    keeps: "Create .keep files?"
+    keeps_description: "This will create .keep files in empty directories"
+    bootsnap: "Add Bootsnap?"
+    bootsnap_description: "Bootsnap gem boot large Rails app faster by optmizing computations"
+    bundle: "Run bundle install?"
+    bundle_description: "Run bundle install after generating Gemfile"
+    pipeline_none: "None"
+    pipeline_none_description: "Choose this to skip using Asset Pipeline"
+    sprockets: "Sprockets"
+    sprockets_description: "The original asset pipeline gem, default"
+    propshaft: "Propshaft"
+    propshaft_description: "Succesor to Sprockets, but still in Alpha"
+    javascript_none: "None"
+    javascript_none_description: "Choose this to skip generation of Javascript files"
+    importmap: "Importmap"
+    importmap_description: "The new Rails 7 way of managing Javascript dependencies, default"
+    esbuild: "ESBuild"
+    esbuild_description: "ESBuild is a Javascript bundler and minifier, it's fast and written in Go"
+    rollup: "Rollup"
+    rollup_description: "Rollup is a module bundler for JavaScript which compiles small pieces of code into something larger and more complex, such as a library or application. Decent module bundler for Javascript"
+    webpack: "Webpack"
+    webpack_description: "Webpack is a module bundler for JavaScript which compiles small pieces of code into something larger and more complex, such as a library or application. Introduced in Rails 6"
+    css_none: "None"
+    css_none_description: "Don't use any CSS bundler"
+    bootstrap: "Bootstrap"
+    bootstrap_description: "Good ol classic for developing responsive web design"
+    tailwind: "Tailwind"
+    tailwind_description: "Autility-first CSS framework for rapidly building custom user interfaces."
+    bulma: "Bulma"
+    bulma_description: "Modern CSS framework based on Flexbox"
+    postcss: "PostCSS"
+    postcss_description: "PostCSS is a tool for transforming CSS with JavaScript."
+    sass: "Sass"
+    sass_description: "Preprocess Sass file into CSS"
+    cable: "Use ActionCable?"
+    cable_description: ActionCable integrates Web Sockets to your Rails app
+    job: "Use ActiveJob?"
+    job_description: "ActiveJob is the default job framework for Rails"
+    mailer: "Use ActionMailer?"
+    mailer_description: "ActionMailer send emails using mailer classes and views"
+    text: "Use ActionText?"
+    text_description: ActionText allows user to edit rich text content easily
+    storage: "Use ActiveStorage?"
+    storage_description: "ActiveStorage facilitate file uploads and attach them to Active Record objects"
+    mailbox: "Use ActionMailbox?"
+    mailbox_description: ActionMailbox routes incoming emails to controller-like mailboxes
+    record: "Use ActiveRecord?"
+    record_description: "ActiveRecord is the default ORM for Rails"
+    hotwire: "Use Hotwire?"
+    hotwire_description: "Send HTML over the wire!"
+    jbuilder: "Use Jbuilder?"
+    jbuilder_description: "Generate JSON output using Simple Ruby DSL"
+    test: "Create test files?"
+    test_description: "Create unit test files for your app"
+    system: "Use system test file?"
+    system_description: "Create system test file for your app"
 
 es:
   flag_command_component:
@@ -15,5 +79,19 @@ es:
     api_description: "Elige esto si planeas usar la aplicación Rails solo como API"
     minimal: "Modo mínimo"
     minimal_description: "Esto omitirá todas las gemas Active-*, bootsnap, builder, spring, system_tests, turbo, etc."
-    
+    sqlite: "SQLite"
+    sqlite_description: "El predeterminado de Rails, Pieter Levels lo usó para escalar remoteok.io!" # TODO: FIX THIS
+    mysql: "MySQL"
+    mysql_description: "Base de datos decente"
+    postgresql: "PostgreSQL"
+    postgresql_description: "Base de datos recomendada con muchas extensiones"
+    gitignore: "¿Crear archivo .gitignore?"
+    gitignore_description: "Esto creará un archivo .gitignore en su aplicación"
+    keeps: "¿Crear archivos .keep?"
+    keeps_description: "Esto creará archivos .keep en directorios vacíos"
+    bootsnap: "¿Agregar Bootsnap?"
+    bootsnap_description: "La gema Bootsnap inicia aplicaciones Rails grandes más rápido optimizando los cálculos"
+    bundle: "¿Ejecutar bundle install?"
+    bundle_description: "Ejecuta bundle install después de generar Gemfile"
+
 
