--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 default: &default
-  host: <%= Figaro.env.host_db %>
-  user: <%= Figaro.env.user_db %>
-  password: <%= Figaro.env.password_db %>
+  host: <%= `ip route | awk '/default/ { print $3 }'`.strip %>
+  user: <%= Rails.application.credentials.dig(:database, :user) %>
+  password: <%= Rails.application.credentials.dig(:database, :password) %>
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
@@ -10,16 +10,16 @@ default: &default
 
 development:
   <<: *default
-  database: clegrandweb_development
+  database: <%= Rails.application.credentials.dig(:database, :name) %>_development
 
 test:
   <<: *default
-  database: clegrandweb_test
+  database: <%= Rails.application.credentials.dig(:database, :name) %>_test
 
 staging:
   <<: *default
-  database: clegrandweb_staging
+  database: <%= Rails.application.credentials.dig(:database, :name) %>_staging
 
 production:
   <<: *default
-  database: clegrandweb_production
+  database: <%= Rails.application.credentials.dig(:database, :name) %>_production
